--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Coffee Page</title>
+    <title>Noir Roast</title>
 
     <!-- ----------------------------------------------------------------------- -->
     <!--                           BOOTSTRAP LINKLERI                            -->
@@ -52,7 +52,7 @@
                         <a class="nav-link" href="#about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#people">People</a>
+                        <a class="nav-link" href="#people">Team</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#menu">Menu</a>
@@ -88,12 +88,12 @@
             <div class="carousel-item active">
                 <img src="./img/slider1.jpg" class="d-block w-100 " alt="...">
                 <div class="carousel-caption d-none d-md-block ">
-                    <div class="hero"><em>cafeharvey.com'a Hoşgeldiniz.</em>
-                        <h1 class="display-1 fw-bolder">Cafe Harvey</h1>
-                        <p class="fs-5 mb-3">your favourite coffee daily lives.</p>
+                    <div class="hero"><em>Welcome to Noir Roast.</em>
+                        <h1 class="display-1 fw-bolder">Noir Roast</h1>
+                        <p class="fs-5 mb-3">Where passion meets the perfect brew.</p>
                         <div class="btn-container">
-                            <button class="btn rounded-pill me-3">Our Story</button>
-                            <button class="btn rounded-pill"><a class="nav-link" href="#menu">Menü</a></button>
+                            <button class="btn rounded-pill me-3">Our Journey</button>
+                            <button class="btn rounded-pill"><a class="nav-link" href="#menu">View Menu</a></button>
                         </div>
                     </div>
 
@@ -104,12 +104,12 @@
             <div class="carousel-item">
                 <img src="./img/slider2.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <div class="hero"><em>cafeharvey.com'a Hoşgeldiniz.</em>
-                        <h1 class="display-1 fw-bolder">Cafe Harvey</h1>
-                        <p class="fs-5 mb-3">your favourite coffee daily lives.</p>
+                    <div class="hero"><em>Welcome to Noir Roast.</em>
+                        <h1 class="display-1 fw-bolder">Noir Roast</h1>
+                        <p class="fs-5 mb-3">Experience the art of coffee.</p>
                         <div class="btn-container">
-                            <button class="btn rounded-pill me-3">Hikayemiz</button>
-                            <button class="btn rounded-pill">Menü</button>
+                            <button class="btn rounded-pill me-3">Our Journey</button>
+                            <button class="btn rounded-pill"><a class="nav-link" href="#menu">View Menu</a></button>
                         </div>
                     </div>
 
@@ -120,12 +120,12 @@
             <div class="carousel-item">
                 <img src="./img/slider3.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <div class="hero"><em>cafeharvey.com'a Hoşgeldiniz.</em>
-                        <h1 class="display-1 fw-bolder">Cafe Harvey</h1>
-                        <p class="fs-5 mb-3">your favourite coffee daily lives.</p>
+                    <div class="hero"><em>Welcome to Noir Roast.</em>
+                        <h1 class="display-1 fw-bolder">Noir Roast</h1>
+                        <p class="fs-5 mb-3">A moment of tranquility in every cup.</p>
                         <div class="btn-container">
-                            <button class="btn rounded-pill me-3">Hikayemiz</button>
-                            <button class="btn rounded-pill">Menü</button>
+                            <button class="btn rounded-pill me-3">Our Journey</button>
+                            <button class="btn rounded-pill"><a class="nav-link" href="#menu">View Menu</a></button>
                         </div>
                     </div>
 
@@ -157,32 +157,28 @@
 
     <section id="about" class="py-5">
 
-        <h1 class="text-center fw-bold mb-4 rounded-5">ABOUT US</h1>
+        <h1 class="text-center fw-bold mb-4 rounded-5">OUR STORY</h1>
         <div class="container">
             <div class="row align-items-center justify-content-center gap-2">
                 <div class="col col-sm-12 col-md-6">
                     <div class="image-container rounded-5 overflow-hidden">
                         <img src="./img/about.jpg" alt="">
                         <div class="about-info d-flex flex-column justify-content-end p-3">
-                            <h4 class="fw-bold">We start since 2019</h4>
-                            <h4>Best in Dublin</h4>
+                            <h4 class="fw-bold">Crafting Coffee Since 2019</h4>
+                            <h4>Award Winning Beans</h4>
                         </div>
                     </div>
 
                 </div>
                 <div class="col col-sm-12 col-md-5">
-                    <em class="pt-5">cafeharvey.com</em>
+                    <em class="pt-5">noirroast.com</em>
                     <h2 class="fs-4 mb-3">
-                        The café, a cherished establishment among the townsfolk, had
-                        existed for as long as anyone could recall.
+                        A sanctuary for coffee lovers, born from a dedication to the craft.
                     </h2>
                     <p class="fs-14">
-                        Managed by the warm and welcoming Mr. and Mrs. Watson, Harvey Cafe
-                        operated under their guidance, offering a cozy atmosphere to its
-                        patrons. This establishment benefits from the support of a free
-                        Bootstrap 5 HTML layout.
+                        Founded by a team of passionate connoisseurs, Noir Roast has quickly become a cornerstone of the local community. We source only the finest ethically grown beans, roasting them in small batches to unlock their full potential. From our signature espresso blends to our delicate pour-overs, every cup is a testament to our commitment to excellence.
                     </p>
-                    <button class="btn">Meet Harvey</button>
+                    <button class="btn">Meet the Team</button>
                 </div>
             </div>
         </div>
@@ -194,8 +190,8 @@
 
     <section id="people">
         <div class="people-header text-center ">
-            <em>Creative Barista</em>
-            <h2>MEET PEOPLE</h2>
+            <em>Master Baristas</em>
+            <h2>MEET THE TEAM</h2>
         </div>
 
         <div class="container rounded-3">
@@ -206,9 +202,9 @@
                     <div class="card">
                         <img src="./img/team/our-team-1.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title fs-5">Card Title</h5>
-                            <h6>Manager</h6>
-                            <p class="card-text">Some quick example text to build on the card title</p>
+                            <h5 class="card-title fs-5">James Miller</h5>
+                            <h6>Head Roaster</h6>
+                            <p class="card-text">Expert in sourcing and roasting our signature blends.</p>
 
                             <div class="d-flex justify-content-evenly">
                                 <a href="#" class="btn fs-6"><i class="bi bi-linkedin"></i></a>
@@ -224,9 +220,9 @@
                     <div class="card">
                         <img src="./img/team/our-team-2.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title fs-5">Card Title</h5>
-                            <h6>Manager</h6>
-                            <p class="card-text">Some quick example text to build on the card title</p>
+                            <h5 class="card-title fs-5">Sarah Jenkins</h5>
+                            <h6>Store Manager</h6>
+                            <p class="card-text">Ensuring every guest feels at home at Noir Roast.</p>
 
                             <div class="d-flex justify-content-evenly">
                                 <a href="#" class="btn fs-6"><i class="bi bi-linkedin"></i></a>
@@ -242,9 +238,9 @@
                     <div class="card">
                         <img src="./img/team/our-team-3.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title fs-5">Card Title</h5>
-                            <h6>Manager</h6>
-                            <p class="card-text">Some quick example text to build on the card title</p>
+                            <h5 class="card-title fs-5">Michael Chen</h5>
+                            <h6>Senior Barista</h6>
+                            <p class="card-text">Latte art champion with a passion for precise extraction.</p>
 
                             <div class="d-flex justify-content-evenly">
                                 <a href="#" class="btn fs-6"><i class="bi bi-linkedin"></i></a>
@@ -260,9 +256,9 @@
                     <div class="card">
                         <img src="./img/team/our-team-4.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title fs-5">Card Title</h5>
-                            <h6>Manager</h6>
-                            <p class="card-text">Some quick example text to build on the card title</p>
+                            <h5 class="card-title fs-5">Emily White</h5>
+                            <h6>Pastry Chef</h6>
+                            <p class="card-text">Crafting the perfect sweet pairings for your coffee.</p>
 
                             <div class="d-flex justify-content-evenly">
                                 <a href="#" class="btn fs-6"><i class="bi bi-linkedin"></i></a>
@@ -278,9 +274,9 @@
                     <div class="card">
                         <img src="./img/team/our-team-5.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title fs-5">Card Title</h5>
-                            <h6>Manager</h6>
-                            <p class="card-text">Some quick example text to build on the card title</p>
+                            <h5 class="card-title fs-5">David Ross</h5>
+                            <h6>Barista</h6>
+                            <p class="card-text">Creates friendly vibes and even better espresso shots.</p>
 
                             <div class="d-flex justify-content-evenly">
                                 <a href="#" class="btn fs-6"><i class="bi bi-linkedin"></i></a>
@@ -296,9 +292,9 @@
                     <div class="card">
                         <img src="./img/team/our-team-6.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title fs-5">Card Title</h5>
-                            <h6>Manager</h6>
-                            <p class="card-text">Some quick example text to build on the card title</p>
+                            <h5 class="card-title fs-5">Lisa Wong</h5>
+                            <h6>Barista</h6>
+                            <p class="card-text">Specializes in cold brew and seasonal signature drinks.</p>
 
                             <div class="d-flex justify-content-evenly">
                                 <a href="#" class="btn fs-6"><i class="bi bi-linkedin"></i></a>
@@ -338,7 +334,7 @@
                 </li>
                 <li class="nav-item" role="presentation">
                     <button class="nav-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-desert"
-                        type="button" role="tab" aria-controls="pills-contact" aria-selected="false">Desert</button>
+                        type="button" role="tab" aria-controls="pills-contact" aria-selected="false">Dessert</button>
                 </li>
 
             </ul>
@@ -396,7 +392,7 @@
                                 <img class="img-thumbnail" width="100%" src="./img/menu/food/2_italian.webp"
                                     alt="Image" />
                             </a>
-                            <h6 class="fs-4 p-2 text-center">İtalian</h6>
+                            <h6 class="fs-4 p-2 text-center">Italian</h6>
                         </div>
                         <div class="col-md-6 col-lg-3">
                             <a data-fslightbox href="./img/menu/food/3_summer-squash-pizza.webp">
@@ -471,16 +467,16 @@
                         </div>
                         <div class="col-md-6">
                             <label for="inputPassword4" class="form-label">E-Mail</label>
-                            <input type="email" class="form-control" id="inputPassword4" placeholder="******@***.com">
+                            <input type="email" class="form-control" id="inputPassword4" placeholder="you@example.com">
                         </div>
                         <div class="col-12">
                             <label for="inputAddress" class="form-label">Address</label>
-                            <input type="text" class="form-control" id="inputAddress" placeholder="İstanbul">
+                            <input type="text" class="form-control" id="inputAddress" placeholder="Istanbul, Turkey">
                         </div>
                         <div class="col-12">
                             <label for="inputAddress2" class="form-label ">Comments</label>
                             <input type="text" class="form-control comments" id="inputAddress2"
-                                placeholder="Enter a comments for us.">
+                                placeholder="Share your experience with us.">
                         </div>
 
                     </form>
@@ -506,7 +502,7 @@
 
                 <div class="col-12 col-lg-4">
                     <p><em>Where to find us</em></p>
-                    <a href="" class="text-dark"><i class="bi bi-geo-alt"></i>224 Park Drive Gotham City</a>
+                    <a href="" class="text-dark"><i class="bi bi-geo-alt"></i> 123 Artisan Ave, Istanbul</a>
                     <div class="d-flex gap-5 mt-3 fs-4">
                         <i class="bi bi-facebook"></i>
                         <i class="bi bi-twitter-x"></i>
@@ -515,22 +511,22 @@
                 </div>
 
                 <div class="col-12 col-lg-4">
-                    <p><strong>Phone:</strong>(+90)55555555555</p>
-                    <p><strong>Email:</strong>harvey@clarusway.com</p>
+                    <p><strong>Phone:</strong> (+90) 555 123 45 67</p>
+                    <p><strong>Email:</strong> info@noirroast.com</p>
                 </div>
 
 
                 <div class="col-12 col-lg-4">
                     <p><em>Opening Hours</em></p>
-                    <p>Monday-Friday_______9:00 - 18:00</p>
-                    <p>Sturday_____________11:00 - 16:30</p>
-                    <p>Sunday______________Closed</p>
+                    <p>Monday-Friday_______7:00 - 20:00</p>
+                    <p>Saturday_____________8:00 - 22:00</p>
+                    <p>Sunday______________9:00 - 18:00</p>
                 </div>
             </div>
 
 
             <div class="text-center">
-                <p>Copyright &copy; Harvey Watcon</p>
+                <p>Copyright &copy; Ferzerker</p>
             </div>
 
         </div>
